--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         - "3306:3306"
       environment:
         MYSQL_ROOT_PASSWORD: root
-        MYSQL_DATABASE: dbName
+        MYSQL_DATABASE: djangoStudy
         MYSQL_USER: user
         MYSQL_PASSWORD: password
         TZ: 'Asia/Tokyo'
@@ -29,7 +29,7 @@ services:
 
   python:
       build: ./python
-      command: uwsgi --socket :8001 --module app.wsgi --py-autoreload 1 --logto /tmp/mylog.log
+      command: uwsgi --socket :8001 --module djangoStudy.wsgi --py-autoreload 1 --logto /tmp/mylog.log
       volumes:
         - ./src:/code
         - ./static:/static
