--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   python:
       build: ./python
-      command: uwsgi --socket :8001 --module djangoStudy.wsgi --py-autoreload 1 --logto /tmp/mylog.log
+      command: uwsgi --socket :8001 --module app.wsgi --py-autoreload 1 --logto /tmp/mylog.log
       volumes:
         - ./src:/code
         - ./static:/static
